--- a/public/index.html
+++ b/public/index.html
@@ -64,13 +64,11 @@
 
 
 
-
-
-
+ <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat"  style="background-color: orangered;">
+    <div id="fb-customer-chat" class="fb-customerchat">
     </div>
 
     <script>
