--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
 
-    <link rel="icon" href="%PUBLIC_URL%/logo.png">
+    <link rel="icon" href="%PUBLIC_URL%/R.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -68,7 +68,7 @@
     <div id="fb-root"></div>
 
     <!-- Your Chat Plugin code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
+    <div id="fb-customer-chat" class="color fb-customerchat">
     </div>
 
     <script>
