--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-
     <link rel="icon" href="%PUBLIC_URL%/R.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -35,6 +34,30 @@
 
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+<!-- Extra css -->
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+  rel="stylesheet">
+
+<!-- ion icons link -->
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<!-- Tailwind CSS CDN Link -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Daisy Ui Links -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/daisyui@2.24.0/dist/full.css" rel="stylesheet" type="text/css" /> -->
+<script src="https://cdn.tailwindcss.com"></script>
+
+<!-- Stylesheets -->
+<link rel="stylesheet" href="./styles/style.css">
+
+<!-- end -->
 
   <!--   owl carousel   -->
   <link rel="stylesheet" href="css/owl.carousel.css">
